Fixed second citation having a different format to the first and third

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 <b>Bibliography</b> <br><br>
 
 <i>Jackson AS, Pollock ML. Generalized equations for predicting body density of men. Br J Nutr. 1978 Nov;40(3):497-504.</i> <br>
-<i>Jackson, Andrew S.; Pollock, Michael L; Ward, Ann. Generalized equations for predicting body density of women. Medicine & Science in Sports & Exercise: Volume 12 - Issue 3 - p 175-182</i> <br>
+<i>Jackson AS, Pollock ML, Ward A. Generalized equations for predicting body density of women. Med Sci Sports Exerc. 1980;12(3):175-81.</i> <br>
 <i>Gruber JJ, Pollock ML, Graves JE, Colvin AB, Braith RW. Comparison of Harpenden and Lange calipers in predicting body composition. Res Q Exerc Sport. 1990 Jun;61(2):184-90.</i> <br>
 
 </body>
