Used CSS to center the form

--- a/index.html
+++ b/index.html
@@ -1,8 +1,13 @@
 <!DOCTYPE html>
 <html>
+
+<head>
+  <link rel="stylesheet" type="text/css" href="styles.css">
+</head>
+
 <body>
 
-<form>
+<form class="parent-block">
 <table>
 <tbody>
 <tr>
