Added text-field and constant-text-field classes to clean up code and differerentiate visually the output fields in the form

--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
 		</select>
 		<label for="gender">Gender:</label><br>
 
-		<input type="text" id="age" name="age" style="width: 50px">
+		<input type="text" id="age" name="age" class="text-field">
 		<label for="age">Age</label><br>
-		<input type="text" id="weight" name="weight" style="width: 50px">
+		<input type="text" id="weight" name="weight" class="text-field">
 		<label for="weight">Weight</label><br>
 
 		<input type="checkbox" id="lange_calipers" name="lange_calipers" value="lange_calipers">
@@ -37,26 +37,26 @@
 	</td>
 
 	<td>
-		<input type="text" id="skinfold_abdomen" name="skinfold_abdomen" style="width: 50px">
+		<input type="text" id="skinfold_abdomen" name="skinfold_abdomen" class="text-field">
 		<label for="skinfold_abdomen">Abdomen</label><br>
-		<input type="text" id="skinfold_quadriceps" name="skinfold_quadriceps" style="width: 50px">
+		<input type="text" id="skinfold_quadriceps" name="skinfold_quadriceps" class="text-field">
 		<label for="skinfold_quadriceps">Quadriceps</label><br>
-		<input type="text" id="skinfold_pectoral" name="skinfold_pectoral" style="width: 50px">
+		<input type="text" id="skinfold_pectoral" name="skinfold_pectoral" class="text-field">
 		<label for="skinfold_pectoral">Pectoral</label><br>
-		<input type="text" id="skinfold_triceps" name="skinfold_triceps" style="width: 50px">
+		<input type="text" id="skinfold_triceps" name="skinfold_triceps" class="text-field">
 		<label for="skinfold_triceps">Triceps</label><br>
-		<input type="text" id="skinfold_midaxilla" name="skinfold_midaxilla" style="width: 50px">
+		<input type="text" id="skinfold_midaxilla" name="skinfold_midaxilla" class="text-field">
 		<label for="skinfold_midaxilla">Midaxilla</label><br>
-		<input type="text" id="skinfold_subscapula" name="skinfold_subscapula" style="width: 50px">
+		<input type="text" id="skinfold_subscapula" name="skinfold_subscapula" class="text-field">
 		<label for="skinfold_subscapula">Subscapula</label><br>
-		<input type="text" id="skinfold_suprailiac" name="skinfold_suprailiac" style="width: 50px">
+		<input type="text" id="skinfold_suprailiac" name="skinfold_suprailiac" class="text-field">
 		<label for="skinfold_suprailiac">Suprailiac</label><br>
 	</td>
 
 	<td>
-		<input type="text" id="percent_fat" name="percent_fat" style="width: 50px" readonly>
+		<input type="text" id="percent_fat" name="percent_fat" class="constant-text-field" readonly>
 		<label for="percent_fat">% Fat:</label><br>
-		<input type="text" id="lean_weight" name="lean_weight" style="width: 50px" readonly>
+		<input type="text" id="lean_weight" name="lean_weight" class="constant-text-field" readonly>
 		<label for="lean_weight">Lean Weight</label><br>
 	</td>
 </tr>
