Increased the size of the fonts in the form

--- a/index.html
+++ b/index.html
@@ -12,25 +12,25 @@
 <tbody>
 <tr>
 	<td>
-		<select id="N_sites" name="N_sites">
+		<select id="N_sites" name="N_sites" class='h1'>
 		  <option value="3">3</option>
 		  <option value="7">7</option>
 		</select>
-		<label for="N_sites"># Sites:</label><br>
+		<label for="N_sites" class='h1'># Sites</label><br>
 
-		<select id="gender" name="gender">
+		<select id="gender" name="gender" class='h1'>
 		  <option value="gender_male">Male</option>
 		  <option value="gender_female">Female</option>
 		</select>
-		<label for="gender">Gender:</label><br>
+		<label for="gender" class='h1'>Gender</label><br>
 
 		<input type="text" id="age" name="age" class="text-field">
-		<label for="age">Age</label><br>
+		<label for="age" class='h1'>Age</label><br>
 		<input type="text" id="weight" name="weight" class="text-field">
-		<label for="weight">Weight</label><br>
+		<label for="weight" class='h1'>Weight</label><br>
 
 		<input type="checkbox" id="lange_calipers" name="lange_calipers" value="lange_calipers">
-		<label for="lange_calipers">Lange Calipers</label><br>
+		<label for="lange_calipers" class='h1'>Lange Calipers</label><br>
 
 		<script src="calculations.js"></script>
 		<input type="button" value="Calculate" onclick="calc(this.form)"><input type="reset" value="Reset" name="Reset"><br>
@@ -38,26 +38,26 @@
 
 	<td>
 		<input type="text" id="skinfold_abdomen" name="skinfold_abdomen" class="text-field">
-		<label for="skinfold_abdomen">Abdomen</label><br>
+		<label for="skinfold_abdomen" class='h1'>Abdomen</label><br>
 		<input type="text" id="skinfold_quadriceps" name="skinfold_quadriceps" class="text-field">
-		<label for="skinfold_quadriceps">Quadriceps</label><br>
+		<label for="skinfold_quadriceps" class='h1'>Quadriceps</label><br>
 		<input type="text" id="skinfold_pectoral" name="skinfold_pectoral" class="text-field">
-		<label for="skinfold_pectoral">Pectoral</label><br>
+		<label for="skinfold_pectoral" class='h1'>Pectoral</label><br>
 		<input type="text" id="skinfold_triceps" name="skinfold_triceps" class="text-field">
-		<label for="skinfold_triceps">Triceps</label><br>
+		<label for="skinfold_triceps" class='h1'>Triceps</label><br>
 		<input type="text" id="skinfold_midaxilla" name="skinfold_midaxilla" class="text-field">
-		<label for="skinfold_midaxilla">Midaxilla</label><br>
+		<label for="skinfold_midaxilla" class='h1'>Midaxilla</label><br>
 		<input type="text" id="skinfold_subscapula" name="skinfold_subscapula" class="text-field">
-		<label for="skinfold_subscapula">Subscapula</label><br>
+		<label for="skinfold_subscapula" class='h1'>Subscapula</label><br>
 		<input type="text" id="skinfold_suprailiac" name="skinfold_suprailiac" class="text-field">
-		<label for="skinfold_suprailiac">Suprailiac</label><br>
+		<label for="skinfold_suprailiac" class='h1'>Suprailiac</label><br>
 	</td>
 
 	<td>
 		<input type="text" id="percent_fat" name="percent_fat" class="constant-text-field" readonly>
-		<label for="percent_fat">% Fat:</label><br>
+		<label for="percent_fat" class='h1'>% Fat</label><br>
 		<input type="text" id="lean_weight" name="lean_weight" class="constant-text-field" readonly>
-		<label for="lean_weight">Lean Weight</label><br>
+		<label for="lean_weight" class='h1'>Lean Weight</label><br>
 	</td>
 </tr>
 </tbody>
