Changed the gender field to a radio button

--- a/index.html
+++ b/index.html
@@ -18,11 +18,10 @@
 		</select>
 		<label for="N_sites" class='h1'># Sites</label><br>
 
-		<select id="gender" name="gender" class='h1'>
-		  <option value="gender_male">Male</option>
-		  <option value="gender_female">Female</option>
-		</select>
-		<label for="gender" class='h1'>Gender</label><br>
+		<input type="radio" id="html" name="gender" value="gender_male" checked="checked">
+		<label for="gender_male" class='h1'>Male</label><br>
+		<input type="radio" id="css" name="gender" value="gender_female">
+		<label for="gender_female" class='h1'>Female</label><br>
 
 		<input type="text" id="age" name="age" class="text-field">
 		<label for="age" class='h1'>Age</label><br>
