--- a/index.html
+++ b/index.html
@@ -64,12 +64,13 @@
 </form>
 
 <br><br><br>
+<div class='bibliography-text'>
+	<b>Bibliography</b> <br><br>
 
-<b>Bibliography</b> <br><br>
-
-<i>Jackson AS, Pollock ML. Generalized equations for predicting body density of men. Br J Nutr. 1978 Nov;40(3):497-504.</i> <br>
-<i>Jackson AS, Pollock ML, Ward A. Generalized equations for predicting body density of women. Med Sci Sports Exerc. 1980;12(3):175-81.</i> <br>
-<i>Gruber JJ, Pollock ML, Graves JE, Colvin AB, Braith RW. Comparison of Harpenden and Lange calipers in predicting body composition. Res Q Exerc Sport. 1990 Jun;61(2):184-90.</i> <br>
+	<i>Jackson AS, Pollock ML. Generalized equations for predicting body density of men. Br J Nutr. 1978 Nov;40(3):497-504.</i> <br>
+	<i>Jackson AS, Pollock ML, Ward A. Generalized equations for predicting body density of women. Med Sci Sports Exerc. 1980;12(3):175-81.</i> <br>
+	<i>Gruber JJ, Pollock ML, Graves JE, Colvin AB, Braith RW. Comparison of Harpenden and Lange calipers in predicting body composition. Res Q Exerc Sport. 1990 Jun;61(2):184-90.</i> <br>
+</div>
 
 </body>
 </html>
