--- a/index.html
+++ b/index.html
@@ -13,15 +13,14 @@
 <tr>
 	<td>
 		<select id="N_sites" name="N_sites" class='h1'>
-		  <option value="3">3</option>
-		  <option value="7">7</option>
-		</select>
-		<label for="N_sites" class='h1'># Sites</label><br>
+		  <option value="3">3 Sites</option>
+		  <option value="7">7 Sites</option>
+		</select><br>
 
-		<input type="radio" id="html" name="gender" value="gender_male" checked="checked">
-		<label for="gender_male" class='h1'>Male</label><br>
-		<input type="radio" id="css" name="gender" value="gender_female">
-		<label for="gender_female" class='h1'>Female</label><br>
+		<select id="gender" name="gender" class='h1'>
+		  <option value="gender_male">Male</option>
+		  <option value="gender_female">Female</option>
+		</select><br>
 
 		<input type="text" id="age" name="age" class="text-field">
 		<label for="age" class='h1'>Age</label><br>
@@ -32,7 +31,8 @@
 		<label for="lange_calipers" class='h1'>Lange Calipers</label><br>
 
 		<script src="calculations.js"></script>
-		<input type="button" value="Calculate" onclick="calc(this.form)"><input type="reset" value="Reset" name="Reset"><br>
+		<input type="button" value="Calculate" onclick="calc(this.form)" class='h1'>
+		<input type="reset" value="Reset" name="Reset" class='h1'><br>
 	</td>
 
 	<td>
@@ -64,7 +64,7 @@
 </form>
 
 <br><br><br>
-<div class='bibliography-text'>
+<div class="bibliography-text">
 	<b>Bibliography</b> <br><br>
 
 	<i>Jackson AS, Pollock ML. Generalized equations for predicting body density of men. Br J Nutr. 1978 Nov;40(3):497-504.</i> <br>
