Added tooltips to describe how each skinfold is taken

--- a/index.html
+++ b/index.html
@@ -37,37 +37,93 @@
 	<td>
 		<div id='skinfold_abdomen_group' style='display:inline'>
 			<input type="text" id="skinfold_abdomen" name="skinfold_abdomen" class="text-field"  oninput="calc(this.form)">
-			<label for="skinfold_abdomen" class='h1'>Abdomen</label><br>
+			<label for="skinfold_abdomen" class='h1'>Abdomen
+				<a class="tooltip">&#x1F6C8;
+					<span>
+						<img src="images/Abdominal_Suprailium1.webp">
+						<img src="images/Abdominal2.webp">
+   					A vertical fold laken at a lateral distance of approximately 2 cm from the umbilicus
+   				</span>
+   			</a>
+   		</label><br>
 		</div>
 
 		<div id='skinfold_quadriceps_group' style='display:inline'>
 			<input type="text" id="skinfold_quadriceps" name="skinfold_quadriceps" class="text-field"  oninput="calc(this.form)">
-			<label for="skinfold_quadriceps" class='h1'>Quadriceps</label><br>
+			<label for="skinfold_quadriceps" class='h1'>Quadriceps
+				<a class="tooltip">&#x1F6C8;
+					<span>
+						<img src="images/Thigh1.webp">
+	 					A vertical fold on the anterior aspect of the thigh midway between hip and knee joints
+	 				</span>
+	 			</a>
+ 			</label><br>
 		</div>
 
 		<div id='skinfold_pectoral_group' style='display:inline'>
 			<input type="text" id="skinfold_pectoral" name="skinfold_pectoral" class="text-field"  oninput="calc(this.form)">
-			<label for="skinfold_pectoral" class='h1'>Pectoral</label><br>
+			<label for="skinfold_pectoral" class='h1'>Pectoral
+				<a class="tooltip">&#x1F6C8;
+					<span>
+						<img src="images/Chest1.webp" id="chest_image1">
+						<img src="images/Chest2.webp" id="chest_image2" style='display:none'>
+						<img src="images/Chest3.webp">
+	 					A diagonal fold taken half of the distance between the anterior axillary line and nipple for men and one third of the distance from the anterior axillary line to the nipple for women
+	 				</span>
+	 			</a>
+			</label><br>
 		</div>
 
 		<div id='skinfold_triceps_group' style='display:none'>
 			<input type="text" id="skinfold_triceps" name="skinfold_triceps" class="text-field"  oninput="calc(this.form)">
-			<label for="skinfold_triceps" class='h1'>Triceps</label><br>
+			<label for="skinfold_triceps" class='h1'>Triceps
+				<a class="tooltip">&#x1F6C8;
+					<span>
+						<img src="images/Subscapula_Triceps1.webp">
+						<img src="images/Triceps2.webp">
+	 					A vertical fold on the posterior midline of the upper arm (over the triceps muscle), halfway between the acromion and olecranon processes; the elbow should be extended and relaxed
+	 				</span>
+	 			</a>
+			</label><br>
 		</div>
 
 		<div id='skinfold_midaxilla_group' style='display:none'>
 			<input type="text" id="skinfold_midaxilla" name="skinfold_midaxilla" class="text-field"  oninput="calc(this.form)">
-			<label for="skinfold_midaxilla" class='h1'>Midaxilla</label><br>
+			<label for="skinfold_midaxilla" class='h1'>Midaxilla
+				<a class="tooltip">&#x1F6C8;
+					<span>
+						<img src="images/Midaxilla1.webp">
+						<img src="images/Midaxilla2.webp">
+	 					A vertical fold on the midaxillary line at the level of the xiphoid process of the sternum
+	 				</span>
+	 			</a>
+			</label><br>
 		</div>
 
 		<div id='skinfold_subscapula_group' style='display:none'>
 			<input type="text" id="skinfold_subscapula" name="skinfold_subscapula" class="text-field"  oninput="calc(this.form)">
-			<label for="skinfold_subscapula" class='h1'>Subscapula</label><br>
+			<label for="skinfold_subscapula" class='h1'>Subscapula
+				<a class="tooltip">&#x1F6C8;
+					<span>
+						<img src="images/Subscapula_Triceps1.webp">
+						<img src="images/Subscapula2.webp">
+	 					A fold laken on a diagonal line coming from the vertebral border to 1 to 2 cm from the inferior angle of the scapula
+	 				</span>
+	 			</a>
+			</label><br>
 		</div>
 
 		<div id='skinfold_suprailiac_group' style='display:none'>
 			<input type="text" id="skinfold_suprailiac" name="skinfold_suprailiac" class="text-field"  oninput="calc(this.form)">
-			<label for="skinfold_suprailiac" class='h1'>Suprailiac</label><br>
+			<label for="skinfold_suprailiac" class='h1'>Suprailiac
+				<a class="tooltip">&#x1F6C8;
+					<span>
+						<img src="images/Abdominal_Suprailium1.webp">
+						<img src="images/Suprailium2.webp">
+	 					A diagonal fold above the crest of the ilium at the spot where an imaginary line would come down from the anterior axillary line. Many recommend that the measure be taken more laterally at the anterior axillary line
+	 				</span>
+	 			</a>
+			</label><br>
 		</div>
 	</td>
 
@@ -88,6 +144,7 @@
 
 	<i>Jackson AS, Pollock ML. Generalized equations for predicting body density of men. Br J Nutr. 1978 Nov;40(3):497-504.</i> <br>
 	<i>Jackson AS, Pollock ML, Ward A. Generalized equations for predicting body density of women. Med Sci Sports Exerc. 1980;12(3):175-81.</i> <br>
+	<i>Jackson AS, Pollock ML. Practical Assessment of Body Composition. Phys Sportsmed. 1985 May;13(5):76-90. </i> <br>
 	<i>Gruber JJ, Pollock ML, Graves JE, Colvin AB, Braith RW. Comparison of Harpenden and Lange calipers in predicting body composition. Res Q Exerc Sport. 1990 Jun;61(2):184-90.</i> <br>
 </div>
 
