Switched character for the information character to something that seems better supported by different devices.

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 		<div id='skinfold_abdomen_group' style='display:inline'>
 			<input type="text" id="skinfold_abdomen" name="skinfold_abdomen" class="text-field"  oninput="calc(this.form)">
 			<label for="skinfold_abdomen" class='h1'>Abdomen
-				<a class="tooltip">&#x1F6C8;
+				<a class="tooltip">&#9432;
 					<span>
 						<img src="images/Abdominal_Suprailium1.webp">
 						<img src="images/Abdominal2.webp">
@@ -51,7 +51,7 @@
 		<div id='skinfold_quadriceps_group' style='display:inline'>
 			<input type="text" id="skinfold_quadriceps" name="skinfold_quadriceps" class="text-field"  oninput="calc(this.form)">
 			<label for="skinfold_quadriceps" class='h1'>Quadriceps
-				<a class="tooltip">&#x1F6C8;
+				<a class="tooltip">&#9432;
 					<span>
 						<img src="images/Thigh1.webp">
 	 					A vertical fold on the anterior aspect of the thigh midway between hip and knee joints
@@ -63,7 +63,7 @@
 		<div id='skinfold_pectoral_group' style='display:inline'>
 			<input type="text" id="skinfold_pectoral" name="skinfold_pectoral" class="text-field"  oninput="calc(this.form)">
 			<label for="skinfold_pectoral" class='h1'>Pectoral
-				<a class="tooltip">&#x1F6C8;
+				<a class="tooltip">&#9432;
 					<span>
 						<img src="images/Chest1.webp" id="chest_image1">
 						<img src="images/Chest2.webp" id="chest_image2" style='display:none'>
@@ -77,7 +77,7 @@
 		<div id='skinfold_triceps_group' style='display:none'>
 			<input type="text" id="skinfold_triceps" name="skinfold_triceps" class="text-field"  oninput="calc(this.form)">
 			<label for="skinfold_triceps" class='h1'>Triceps
-				<a class="tooltip">&#x1F6C8;
+				<a class="tooltip">&#9432;
 					<span>
 						<img src="images/Subscapula_Triceps1.webp">
 						<img src="images/Triceps2.webp">
@@ -90,7 +90,7 @@
 		<div id='skinfold_midaxilla_group' style='display:none'>
 			<input type="text" id="skinfold_midaxilla" name="skinfold_midaxilla" class="text-field"  oninput="calc(this.form)">
 			<label for="skinfold_midaxilla" class='h1'>Midaxilla
-				<a class="tooltip">&#x1F6C8;
+				<a class="tooltip">&#9432;
 					<span>
 						<img src="images/Midaxilla1.webp">
 						<img src="images/Midaxilla2.webp">
@@ -103,7 +103,7 @@
 		<div id='skinfold_subscapula_group' style='display:none'>
 			<input type="text" id="skinfold_subscapula" name="skinfold_subscapula" class="text-field"  oninput="calc(this.form)">
 			<label for="skinfold_subscapula" class='h1'>Subscapula
-				<a class="tooltip">&#x1F6C8;
+				<a class="tooltip">&#9432;
 					<span>
 						<img src="images/Subscapula_Triceps1.webp">
 						<img src="images/Subscapula2.webp">
@@ -116,7 +116,7 @@
 		<div id='skinfold_suprailiac_group' style='display:none'>
 			<input type="text" id="skinfold_suprailiac" name="skinfold_suprailiac" class="text-field"  oninput="calc(this.form)">
 			<label for="skinfold_suprailiac" class='h1'>Suprailiac
-				<a class="tooltip">&#x1F6C8;
+				<a class="tooltip">&#9432;
 					<span>
 						<img src="images/Abdominal_Suprailium1.webp">
 						<img src="images/Suprailium2.webp">
