Fixed a lot of css issues

--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
 <tbody>
 <tr id='tr1'>
 	<td>
-		<select id="N_sites" name="N_sites" class='h1' oninput="calc(this.form);update_visible(this.form)">
-		  <option value="3">3 Sites</option>
-		  <option value="7">7 Sites</option>
+		<select id="N_sites" name="N_sites" class='dropdown' oninput="calc(this.form);update_visible(this.form)">
+			  <option value="3">3 Sites</option>
+			  <option value="7">7 Sites</option>
 		</select><br>
 
-		<select id="gender" name="gender" class='h1' oninput="calc(this.form);update_visible(this.form)">
+		<select id="gender" name="gender" class='dropdown' oninput="calc(this.form);update_visible(this.form)">
 		  <option value="gender_male">Male</option>
 		  <option value="gender_female">Female</option>
 		</select><br>
